# Paad

./: .gitignore  LICENSE  README.md  mockup_to_train.ipynb  other_ml_main.ipynb  other_ml_pre.ipynb  other_ml_pre_main_1.ipynb  pre_main.ipynb  pyproject.toml  requirements.txt  serving_test.ipynb  setup.py  test_and_mockup.ipynb  test_preprocess.ipynb
python/: pd_preprocess_from_dataset.py  prepare_dataset.py  preprocess_tools.py  utils.py  utils_for_preprocess.py
src/: main.py  preprocess_tools.py
src/model/: __init__.py  autoencoder.py  isolation_forest.py  lof.py
src/models/: models.py
src/models/submodule/: __init__.py  autoencoder.py  isolation_forest.py  local_outlier_factor.py  lof.py
src/prepare_dataset/: __init__.py  prepare_dataset.py
src/preprocess/: __init__.py  pd_preprocess.py  preprocess_submodules.py
src/preprocess/submodule/: fft.py  file_to_vector.py  get_features.py  list_to_vector.py  normalize.py  train_test_split.py  vector_to_numpy_arr.py
src/train_and_eval/: eval.py  train.py  train_and_eval.py
src/train_and_eval/submodule/: metric.py  predict.py
src/utils/: __init__.py  utils_general.py  utils_preprocess.py
src/utils/submodule/: audio_to_img.py  load_audio.py  pickle_data.py  vector_to_numpy_arr.py
test/: prepare_dataset_unit_test.py
tests/subtests/: compatability_test.py  how_many_lines.py
